<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <View
            android:id="@+id/line_headline_main"
            android:layout_width="0.6dp"
            android:layout_height="0dp"
            android:alpha="0.4"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_score"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/line_headline_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_headline_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="9.44" />

        <TextView
            android:id="@+id/tv_headline_users"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_headline_score"
            app:layout_constraintStart_toStartOf="@+id/tv_headline_score"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_score"
            tools:text="247,871 users" />

        <TextView
            android:id="@+id/tv_headline_ranked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_ranked"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guide_headline_main"
            app:layout_constraintStart_toEndOf="@+id/line_headline_main"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_headline_ranked_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guide_headline_main"
            app:layout_constraintTop_toTopOf="@+id/tv_headline_ranked"
            tools:text="#1" />

        <TextView
            android:id="@+id/tv_headline_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_popularity"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guide_headline_main"
            app:layout_constraintStart_toStartOf="@+id/tv_headline_ranked"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_ranked" />

        <TextView
            android:id="@+id/tv_headline_popularity_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_headline_ranked_count"
            app:layout_constraintStart_toStartOf="@+id/tv_headline_ranked_count"
            app:layout_constraintTop_toTopOf="@+id/tv_headline_popularity"
            tools:text="#2" />

        <TextView
            android:id="@+id/tv_headline_member"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_members"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guide_headline_main"
            app:layout_constraintStart_toStartOf="@+id/tv_headline_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_popularity" />

        <TextView
            android:id="@+id/tv_headline_member_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_headline_popularity_count"
            app:layout_constraintStart_toStartOf="@+id/tv_headline_popularity_count"
            app:layout_constraintTop_toTopOf="@+id/tv_headline_member"
            tools:text="513,583" />

        <TextView
            android:id="@+id/tv_headline_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:text="Manga" />

        <View
            android:id="@+id/line_headline_second"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary" />

        <View
            android:id="@+id/line_headline_third"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_headline_serialization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:text="Young Animal" />

        <TextView
            android:id="@+id/tv_headline_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:text="Miura, Kentarou" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:constraint_referenced_ids="tv_headline_type,line_headline_second,tv_headline_serialization,line_headline_third,tv_headline_author"
            app:flow_horizontalGap="8dp"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_headline_member"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_member" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_headline_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="163dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
